--- a/app/views/teams/member/_calendar.html.erb
+++ b/app/views/teams/member/_calendar.html.erb
@@ -44,12 +44,14 @@
       <span class="px-3.5 py-1 text-sm rounded-md font-semibold whitespace-nowrap <%= date_colors[:long_run] %>">
         Long Run
       </span>
-      <span class="px-3.5 py-1 text-sm rounded-md font-semibold whitespace-nowrap <%= date_colors[:start] %>">
-        Season Start
-      </span>
-      <span class="px-3.5 py-1 text-sm rounded-md font-semibold whitespace-nowrap <%= date_colors[:end] %>">
-        Season End
-      </span>
+      <% if team.season_dates? %>
+        <span class="px-3.5 py-1 text-sm rounded-md font-semibold whitespace-nowrap <%= date_colors[:start] %>">
+          Season Start
+        </span>
+        <span class="px-3.5 py-1 text-sm rounded-md font-semibold whitespace-nowrap <%= date_colors[:end] %>">
+          Season End
+        </span>
+      <% end %>
     </div>
   </div>
 
