feat(landing): add events feature to landing page

--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -106,7 +106,7 @@
   </div>
 
   <% features = [
-    { name: 'Team Management', desc: 'Lead your team to success by setting season dates, creating team goals, and tracking progress over time. Analyze performance trends with intuitive graphs, helping you make data-driven decisions to optimize training and maximize results.', icon: 'team-filled', color: 'from-yellow-400 to-amber-500' },
+    { name: 'Team Management', desc: 'Lead your team to success by setting season dates, creating team goals, scheduling events, and tracking progress over time. Analyze performance trends with intuitive graphs, helping you make data-driven decisions to optimize training and maximize results.', icon: 'team-filled', color: 'from-yellow-400 to-amber-500' },
     { name: 'Performance Tracking', desc: 'Track your runs with detailed stats, insights, and historical comparisons to measure your progress over time.', icon: 'analytics', color: 'from-red-400 via-rose-500 to-red-600' },
     { name: 'Goal Setting', desc: 'Set personal and team goals to push your limits. Personalized messages let you know if you’re falling behind, on track, or ahead of your goal.', icon: 'medal-filled', color: 'from-emerald-400 via-emerald-500 to-green-600' },
     { name: 'Team Communication', desc: 'Stay connected with your team through built-in real-time messaging and topic-based discussions.', icon: 'chat-filled', color: 'from-violet-400 via-violet-500 to-indigo-600' },
